# rust-graphql

./: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: CI.yml
src/: main.rs
