[package]
name = "finance"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
async-graphql = "5.0.10"
async-graphql-actix-web = "5.0.10"
# serde = { version = "1.0.164", features = ["derive"] }
# serde_json = "1.0.97"
# sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native" ] }
