[package]
name = "finance"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "finance"
path = "src/main.rs"


[dependencies]
actix-web = "4.3.1"
async-graphql = "5.0.10"
async-graphql-actix-web = "5.0.10"
dotenv = "0.15.0"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "postgres" ] }
# serde = { version = "1.0.164", features = ["derive"] }
# serde_json = "1.0.97"
